# dcpu

./: .classpath  .gitignore  .project  CMakeLists.txt  Cargo.toml  README  README.md  add.go  add_test.go  basic_opcodes.go  basic_opcodes_test.go  binary_and_test.go  binary_exclusive_or_test.go  binary_or_test.go  clock.go  dcpu.go  dcpu_test.go  debug_opcodes.go  display.js  divide.go  divide_signed.go  divide_signed_test.go  divide_test.go  go.mod  go.sum  hardware.go  hardware_interrupt.go  hardware_query.go  if_above_test.go  if_bit_set.go  if_bit_set_test.go  if_clear_test.go  if_equal_test.go  if_greater_than_test.go  if_less_than_test.go  if_not_equal_test.go  if_under_test.go  interrupt_add_to_queue.go  jump_sub_routine.go  mackapar.html  (+23 more)
.externalToolBuilders/: ANTLR4.launch  mkdir.launch  protoc.launch
assembler/: add_test.go  assembler.go  binary_and_test.go  binary_exclusive_or_test.go  binary_or_test.go  divide_signed_test.go  divide_test.go  if_above_test.go  if_bit_set_test.go  if_clear_test.go  if_equal_test.go  if_greater_than_test.go  if_less_than_test.go  if_not_equal_test.go  if_under_test.go  modulo_test.go  multiply_signed_test.go  multiply_test.go  shift_left_test.go  shift_right_test.go  subtract_test.go
clock/: clock.go
dcpu/: dcpu.1  main.cpp
dcpu.xcodeproj/: project.pbxproj
documents/: 3d-vector-display.txt  HIT_HMD2043.txt  dcpu-16.txt  floppy-drive.txt  keyboard.txt  kulog_k8581.txt  monitor.txt  sleep-chamber.txt
floppy/: floppy.go  harold.go
hardware/: loop.go  plugin.go
include/: buffer.hpp  glfwapplication.hpp  interface.hpp  program.hpp  vertexarray.hpp  vertexformat.hpp
java/: Dcpu.g4
keyboard/: keyboard.go
monitor/: monitor.go
parser/: DCPU.g4  DCPU.interp  DCPULexer.interp  DCPULexer.tokens  add_test.go  assembler.go  binary_and_test.go  binary_exclusive_or_test.go  binary_or_test.go  dcpu_base_listener.go  dcpu_base_visitor.go  dcpu_lexer.go  dcpu_listener.go  dcpu_parser.go  dcpu_visitor.go  divide_signed_test.go  divide_test.go  if_above_test.go  if_bit_set_test.go  if_clear_test.go  if_equal_test.go  if_greater_than_test.go  if_less_than_test.go  if_not_equal_test.go  if_under_test.go  modulo_test.go  multiply_signed_test.go  multiply_test.go  parser.go  shift_left_test.go  shift_right_test.go  (+1 more)
source/: CMakeLists.txt  Dcpu.g4  assembler.cc  assembler.cpp  assembler.h  assembler.hpp  boxes.asm  buffer.cpp  clock.cpp  clock.hpp  dcpu.cc  dcpu.cpp  dcpu.h  dcpu.hpp  dcpu_test.cc  dcpurenderer.cpp  dcpurenderer.hpp  disassembler.cc  disassembler.cpp  disassembler.h  disassembler.hpp  disassembler_test.cc  dsl.cpp  dsl.hpp  fragment.glsl  glfwapplication.cpp  hardware.hpp  lexer.cpp  lexer.hpp  mackaparsuspendedparticleexciterdisplay.cpp  mackaparsuspendedparticleexciterdisplay.hpp  main.ascii  main.cc  main.cpp  mouse.cpp  parser.cpp  parser.hpp  program.cpp  program.pb.cc  program.pb.h  (+4 more)
(+140 files in other folders)
